# 3xui-shop

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __main__.py
app/api/: main.py
app/bot/: __init__.py  commands.py  main.py  widgets.py
app/bot/filters/: __init__.py
app/bot/middlewares/: __init__.py  garbage.py  throttling.py
app/bot/routers/: __init__.py
app/bot/routers/main_menu/: __init__.py  dialog.py  handler.py
app/bot/routers/misc/: error_handler.py
app/core/: config.py  constants.py  enums.py  logger.py
